--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "Hide Download Bar",
   "description": "Hide Download Bar",
-  "version": "0.1",
+  "version": "0.2",
 
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
 
-  "browser_action": {
+  "action": {
     "default_title": "Hide Download Bar"
   },
 
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+H"
+        "default": "Ctrl+Shift+H",
+        "mac": "Alt+Shift+H"
       }
     }
   },
